Got Sign up/in/out working

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= devise_error_messages! %>
 
   <div><%= f.label :name %><br />
-  <%= f.username_field :username, autofocus: true %></div>
+    <%= f.text_field :username, autofocus: true %></div>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
