--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Hello World!</h1>
+<p><%= link_to "Sign-In", new_user_session_path %><br />
+<%= link_to "Sign-Up", new_user_registration_path %><br />
+  <%= link_to "Sign-Out", destroy_user_session_path, method: :delete %></p>
+
+<h1>Welcome to Proto - The place to share links!</h1>
