--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,10 +7,10 @@
   <%= f.email_field :email, autofocus: true %></div>
 
   <div><%= f.label :location %><br />
-  <%= f.email_field :location %></div>
+    <%= f.text_field :location %></div>
 
   <div><%= f.label :bio %><br />
-  <%= f.email_field :bio %></div>
+    <%= f.text_field :bio %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
