--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 <body>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+  <p><%= link_to "Sign-In", new_user_session_path %><br />
+<%= link_to "Sign-Up", new_user_registration_path %><br />
+  <%= link_to "Sign-Out", destroy_user_session_path, method: :delete %></p>
+
 
 <%= yield %>
 
