--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+  <% if signed_in? %>
+    <%= link_to "Sign-Out", destroy_user_session_path, method: :delete %></li>
+  <% else %>
+    <%= link_to "Sign-In", new_user_session_path %> / 
+    <%= link_to "Sign-Up", new_user_registration_path %>
+  <% end %>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
-  <p><%= link_to "Sign-In", new_user_session_path %><br />
-<%= link_to "Sign-Up", new_user_registration_path %><br />
-  <%= link_to "Sign-Out", destroy_user_session_path, method: :delete %></p>
 
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
