--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -10,26 +10,29 @@
 </p>
 
 <p>
-<ul>
-  <% @link.comments.each do |comment| %>
-    <li>
-      <%= comment.body %>
-      <%= comment.user.email unless comment.user.blank? %>
-      <%= link_to 'Delete', [@discussion, comment], method: :delete %>
-  </li>
-  <% end %>
-</ul>
+  <ul>
+    <% @link.comments.each do |comment| %>
+      <li>
+        <%= comment.body %><br />
+        <%= comment.user.email unless comment.user.blank? %>
+        <% if user_signed_in? %>
+          <%= link_to 'Delete', [@link, comment], method: :delete %>
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+</p>
 
-<% if user_signed_in? %>
-  <%= form_for [@link, Comment.new] do |f| %>
-    <%= f.label :comment %>
-    <%= f.text_area :body %>
-    <%= f.submit "Comment" %>
+<p>
+  <% if user_signed_in? %>
+    <%= form_for [@link, Comment.new] do |f| %>
+      <%= f.label :comment %>
+      <%= f.text_area :body %>
+      <%= f.submit "Comment" %>
+    <% end %>
+  <% else %>
+    <%= link_to 'Sign in to Comment', new_user_session_path %>
   <% end %>
-<% else %>
-  <%= link_to 'Sign in to Comment', new_session_path %>
-<% end %>
-
 </p>
 
 <%= link_to 'Back', links_path %>
